--- a/village/src/components/components.css
+++ b/village/src/components/components.css
@@ -20,7 +20,7 @@
 
 .SmurfForm button{
     position: relative;
-    left: 40px;
+    left: 12%;
     background: #3399cc;
     font-size: 1.3rem;
     border-radius: 10px;
